--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,11 @@
 {
   "presets": [
-    "@babel/env",
+    ["@babel/preset-env",
+    {
+      "targets": {
+        "node": "current"
+      },
+    }],
     "@babel/typescript",
     "@babel/react"
   ],
