--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "trivia-quiz",
+  "name": "spotify-tools",
   "version": "1.0.0",
-  "description": "Trivia Quiz App",
+  "description": "Spotify Tools",
   "scripts": {
     "build": "webpack --progress --mode=production",
-    "start": "webpack s --config ./webpack.config.js --mode=development"
+    "start": "webpack serve --config ./webpack.config.js --mode=development"
   },
   "devDependencies": {
     "@babel/core": "7.12.3",
@@ -18,10 +18,10 @@
     "babel-polyfill": "^6.26.0",
     "fork-ts-checker-webpack-plugin": "6.0.1",
     "html-webpack-plugin": "5.0.0-alpha.14",
-    "typescript": "4.0.5",
-    "webpack": "5.4.0",
-    "webpack-cli": "4.2.0",
-    "webpack-dev-server": "3.11.0"
+    "typescript": "^4.0.5",
+    "webpack": "^5.11.1",
+    "webpack-cli": "^4.3.0",
+    "webpack-dev-server": "^3.11.1"
   },
   "dependencies": {
     "@types/react": "17.0.0",
@@ -33,5 +33,7 @@
     "styled-components": "^5.2.1"
   },
   "main": "index.js",
-  "author": "Ramazan Öztürk"
+  "author": "Ramazan Öztürk",
+  "keywords": [],
+  "license": "ISC"
 }
