--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
     "@types/styled-components": "^5.1.4",
+    "fuzzball": "^1.3.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.1.0",
