--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-loader": "8.2.1",
     "babel-plugin-styled-components": "^1.12.0",
     "babel-polyfill": "^6.26.0",
+    "copy-webpack-plugin": "^7.0.0",
     "fork-ts-checker-webpack-plugin": "6.0.1",
     "html-webpack-plugin": "5.0.0-alpha.14",
     "typescript": "^4.0.5",
